delete Dao class, fix code duplicates, fix codestyle